sonar issues fixed